[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-replayer-adapter-python"
version = "0.1.0"
description = "Python Replayer Adapter for Temporal workflows with debugging capabilities"
authors = [
    {name = "Temporal Technologies", email = "support@temporal.io"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["temporal", "workflow", "debugging", "replay", "interceptor"]
dependencies = [
    "temporalio>=1.15.0",
    "requests>=2.32.0"
]

[project.urls]
Homepage = "https://github.com/temporalio/temporal-goland-plugin"
Repository = "https://github.com/temporalio/temporal-goland-plugin"
Issues = "https://github.com/temporalio/temporal-goland-plugin/issues"
Documentation = "https://github.com/temporalio/temporal-goland-plugin/blob/main/replayer-adapter-python/README.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools]
packages = ["replayer_adapter_python"]
package-dir = {"replayer_adapter_python" = "."}

[tool.setuptools.package-data]
replayer_adapter_python = ["*.py", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 